# plumage

./: .bumpversion.cfg  .gitignore  .mailmap  README.md  changelog.md  changes.md  package-lock.json  package.json  pyproject.toml  readme.md
.github/: dependabot.yaml
.github/workflows/: autofix.yaml  autolock.yaml  build.yaml  changelog.yaml  docs.yaml  label-sponsors.yaml  labeller-file-based.yaml  labels.yaml  lint.yaml  optimize-images.yaml  release.yaml
docs/assets/: dependencies.mmd  plumage-header-logo.xcf
docs/images/: dependencies.dot
plumage/: __init__.py  config.py  dom_transforms.py  favicon.py  package-lock.json  package.json  webassets.py
plumage/static/css/: code.scss  jquery.mglass.css  main.scss  mglass.scss  pygment-monokai.css  pygment-solarized-dark.css  pygment-solarized-light.css  style.css
plumage/static/css/pygments/: abap.css  algol.css  algol_nu.css  arduino.css  autumn.css  borland.css  bw.css  coffee.css  colorful.css  default.css  dracula.css  emacs.css  friendly.css  friendly_grayscale.css  fruity.css  github-dark.css  gruvbox-dark.css  gruvbox-light.css  igor.css  inkpot.css  lightbulb.css  lilypond.css  lovelace.css  manni.css  material.css  monokai.css  murphy.css  native.css  nord-darker.css  nord.css  one-dark.css  paraiso-dark.css  paraiso-light.css  pastie.css  perldoc.css  rainbow_dash.css  rrt.css  sas.css  solarized-dark.css  solarized-light.css  (+10 more)
plumage/static/js/: application.js  main.js  tipuesearch_set.js
plumage/templates/: analytics.html  archives.html  article.html  author.html  authors.html  base.html  categories.html  category.html  index.html  macros.html  page.html  pagination.html  period_archives.html  projects.html  search.html  tag.html  tags.html  translations.html
static/css/: application.css  bootswatch.css  pygment-solarized-dark.css  pygment-solarized-light.css  style.css  tipuesearch.css
static/js/: application.js
templates/: analytics.html  archives.html  article.html  author.html  base.html  categories.html  category.html  index.html  macros.html  page.html  pagination.html  projects.html  search.html  tag.html  tags.html  translations.html
