[project]
# Docs: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
name = "plumage"
version = "4.1.0"
# Python versions and their status: https://devguide.python.org/versions/
requires-python = ">= 3.9"
description = "Clean and tidy theme for Pelican"
authors = [{ name = "Kevin Deldycke", email = "kevin@deldycke.com" }]
readme = "readme.md"
keywords = [
    'pelican',
    'pelican-theme',
    'stork',
    'static-search',
    'masonry',
    'myst',
    'theme',
    'bootstrap',
    'jquery',
]
classifiers = [
    # See: https://pypi.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'Framework :: Pelican :: Themes',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)',
    'Operating System :: OS Independent',
    'Programming Language :: JavaScript',
    'Programming Language :: Other',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Indexing/Search',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Typing :: Typed',
]
dependencies = [
    # "closure ~= 20191111",            # XXX Unmaintained!
    "cssmin ~= 0.2.0",                # XXX Unmaintained!
    "libsass ~= 0.23.0",
    "pelican ~= 4.8.0",
    "pelican-myst-reader ~= 1.3.0b1",
    # "pelican-myst-reader @ git+https://github.com/ashwinvis/myst-reader.git@main",
    # "pelican-myst-reader @ ../myst-reader/",  # XXX Dev!
    "pelican-webassets ~= 2.0.0",
    "pynpm ~= 0.2.0",
    "pyquery ~= 2.0.0",
]

[project.optional-dependencies]
test = ["djlint ~= 1.34.1"]

[project.urls]
"Homepage" = 'https://github.com/kdeldycke/plumage'
"Documentation" = 'https://github.com/kdeldycke/plumage#settings'
"Repository" = 'https://github.com/kdeldycke/plumage'
"Funding" = "https://github.com/sponsors/kdeldycke"
"Issues" = "https://github.com/kdeldycke/plumage/issues"
"Changelog" = "https://github.com/kdeldycke/plumage/blob/main/changelog.md#changelog"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["pyquery", "pynpm", "pelican.*"]

[tool.bumpversion]
current_version = "4.1.0"
allow_dirty = true

[[tool.bumpversion.files]]
# Update Python package version in any __init__.py file.
glob = "./**/__init__.py"
ignore_missing_version = true

[[tool.bumpversion.files]]
# Update version in project section.
filename = "./pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
# Update the version in standard Markdown changelog.
filename = "./changelog.md"
search = "## [{current_version} (unreleased)]("
replace = "## [{new_version} (unreleased)]("
